# wannabuild

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .jscpd.json  .lizardrc  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .secrets.baseline  .shellcheckrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  STATE.md  lychee.toml  release-please-config.json  renovate.json
.claude/: INSTALL.md
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
.cursor-plugin/: plugin.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh  post-start.sh  tools-required.txt
.factory-plugin/: marketplace.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  release.yml
agents/: wb-alternatives-analyst.md  wb-api-doc-generator.md  wb-architect.md  wb-architecture-reviewer-spark.md  wb-architecture-reviewer.md  wb-changelog-writer.md  wb-ci-guardian.md  wb-code-simplifier.md  wb-dependency-mapper.md  wb-failure-forecast.md  wb-feasibility-analyst.md  wb-implementer-escalated-spark.md  wb-implementer-escalated.md  wb-implementer-spark.md  wb-implementer.md  wb-integration-tester-spark.md  (+14 more)
crates/wb-runtime/: Cargo.toml
crates/wb-runtime/src/: adapters.rs  checkpoints.rs  cli.rs  context.rs  errors.rs  events.rs  evidence.rs  gates.rs  lib.rs  locks.rs  main.rs  scheduler.rs  state.rs  tasks.rs  transitions.rs
crates/wb-runtime/tests/: runtime_cli.rs
docs/: ci.md  (+27 more)
(+245 files in other folders)
