[package]
name = "wb-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
fs2 = "0.4.3"
getrandom = "0.3.4"
hmac = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting"] }

[dev-dependencies]
assert_cmd = "2.1.1"
tempfile = "3.23.0"
